add nonsnse Widget

--- a/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
+++ b/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
@@ -82,6 +82,7 @@
         <add enabled="True" name="Test Form Widgets" title="Test Form Widgets" description="Test Form Widgets">
           <tools>
             <add enabled="True" type="SitefinityWebApp.testFormWidget1, SitefinityWebApp" title="testFormWidget1" description="testFormWidget1" visibilityMode="None" name="testFormWidget1" />
+            <add enabled="True" type="SitefinityWebApp.Designer.FormWidget1, SitefinityWebApp" title="FormWidget1" description="FormWidget1" visibilityMode="None" name="FormWidget1" />
           </tools>
         </add>
       </sections>
