--- a/SitefinityWebApp.csproj
+++ b/SitefinityWebApp.csproj
@@ -625,9 +625,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureWebRole.cs" />
-    <Compile Include="Designer\testFormWidget1Designer.cs" />
+    <Compile Include="Designer\Designer\FormWidget1Designer.cs" />
+    <Compile Include="Designer\FormWidget1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="testFormWidget1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Sitefinity\WebsiteTemplates\MyTheme1\App_Themes\MyTheme1\Global\cssLoadOrder.xml" />
@@ -681,8 +681,10 @@
     <Content Include="ClientBin\Telerik.Sitefinity.Analytics.xap" />
     <Content Include="ClientBin\Telerik.Sitefinity.Silverlight.xap" />
     <Content Include="Default.aspx" />
-    <Content Include="Designer\testFormWidget1Designer.ascx" />
-    <Content Include="Designer\testFormWidget1Designer.js" />
+    <Content Include="Designer\Designer\FormWidget1Designer.ascx" />
+    <Content Include="Designer\Designer\FormWidget1Designer.js" />
+    <Content Include="Designer\FormWidget1.ascx" />
+    <Content Include="Designer\FormWidget1.js" />
     <Content Include="Silverlight.js" />
     <Content Include="Sitefinity\Default.aspx" />
     <Content Include="Sitefinity\Public\Services\Thunder\ThunderService.svc" />
@@ -793,8 +795,6 @@
     <Content Include="Sitefinity\Services\Versioning\HistoryService.svc" />
     <Content Include="Sitefinity\Services\Workflow\WorkflowDefinitionService.svc" />
     <Content Include="Sitefinity\Services\Workflow\WorkflowService.svc" />
-    <Content Include="testFormWidget1.ascx" />
-    <Content Include="testFormWidget1.js" />
     <Content Include="web.config">
       <SubType>Designer</SubType>
     </Content>
