--- a/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
+++ b/App_Data/Sitefinity/Configuration/ToolboxesConfig.config
@@ -75,6 +75,11 @@
             <add enabled="True" type="Telerik.Sitefinity.Modules.Ecommerce.Orders.Web.UI.WishlistControl, Telerik.Sitefinity.Ecommerce" title="WishListToolboxName" description="WishListToolboxDescription" resourceClassId="OrdersResources" cssClass="sfWishListIcn" moduleName="Ecommerce" visibilityMode="None" name="WishList" />
           </tools>
         </add>
+        <add enabled="True" name="my widgets" title="my widgets" description="my widgets">
+          <tools>
+            <add enabled="True" type="SitefinityWebApp.widget.MyWidget1, SitefinityWebApp" title="MyWidget1" description="MyWidget1" visibilityMode="None" name="MyWidget1" />
+          </tools>
+        </add>
       </sections>
     </toolbox>
     <toolbox name="FormControls">
